# cpp_introspection

./: .gitignore  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml  stack.xml
cmake/: introspection.cmake.in
include/introspection/: accessor.h  conversion.h  field.h  field_traits.h  forwards.h  introspection.h  message.h  message_expansion.h  message_template.h  package.h  type.h
src/: CMakeLists.txt  introspection.cpp  test.cpp  types.cpp
src/package/: CMakeLists.txt  field.cpp.in  message.cpp.in  package.cpp.in  package.h.in
